feat: implement transactional stock updates and history logging with custom column mapping